footer alignment fix

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -118,8 +118,7 @@
   hr {
     border: 1px solid rgba(220, 209, 178, 0.83);
     width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
   }
 
   .footer-bottom p {
